Add DFS Implementation to Question 297