@@ -16,45 +16,90 @@
  */
 
  // Method 1
+// public class Codec {
+//     private String SEP = ",";
+//     private String NULL = "#";
+//     // Encodes a tree to a single string.
+//     public String serialize(TreeNode root) {
+//         StringBuilder sb = new StringBuilder();
+//         serialize(root, sb);
+//         return sb.toString();
+//     }
+
+//     private void serialize(TreeNode root, StringBuilder sb) {
+//         if (root == null) {
+//             sb.append(NULL).append(SEP);
+//             return;
+//         }
+//         sb.append(root.val).append(SEP);
+//         serialize(root.left, sb);
+//         serialize(root.right, sb);
+//     }
+
+//     // Decodes your encoded data to tree.
+//     public TreeNode deserialize(String data) {
+//         LinkedList<String> nodes = new LinkedList<>();
+//         for (String s: data.split(SEP)) {
+//             nodes.addLast(s);
+//         }
+//         return deserialize(nodes);
+//     }
+
+//     private TreeNode deserialize(LinkedList<String> nodes) {
+//         if (nodes.isEmpty()) return null;
+//         String first = nodes.removeFirst();
+//         if (first.equals(NULL)) return null;
+//         TreeNode root = new TreeNode(Integer.parseInt(first));
+//         root.left = deserialize(nodes);
+//         root.right = deserialize(nodes);
+//         return root;
+//     }
+// }
+
+// Method 2: Depth First Search (DFS)
+// Time Complexity: O(N) - in both serialization and deserialization functions, we visit each node exactly once, thus the time complexity is O(N), where N is the number of nodes
+// Space Complexity: in both serialization and deserialization functions, we keep the entire tree, either at the beginning or at the end, therefore, the space complexity is O(N)
 public class Codec {
-    private String SEP = ",";
-    private String NULL = "#";
-    // Encodes a tree to a single string.
-    public String serialize(TreeNode root) {
-        StringBuilder sb = new StringBuilder();
-        serialize(root, sb);
-        return sb.toString();
-    }
 
-    private void serialize(TreeNode root, StringBuilder sb) {
+    public String rserialize(TreeNode root, String str) {
+        // Recursive serialization.
         if (root == null) {
-            sb.append(NULL).append(SEP);
-            return;
+          str += "null,";
+        } else {
+          str += str.valueOf(root.val) + ",";
+          str = rserialize(root.left, str);
+          str = rserialize(root.right, str);
         }
-        sb.append(root.val).append(SEP);
-        serialize(root.left, sb);
-        serialize(root.right, sb);
-    }
+        return str;
+      }
+    
+      // Encodes a tree to a single string.
+      public String serialize(TreeNode root) {
+        return rserialize(root, "");
+      }
 
-    // Decodes your encoded data to tree.
-    public TreeNode deserialize(String data) {
-        LinkedList<String> nodes = new LinkedList<>();
-        for (String s: data.split(SEP)) {
-            nodes.addLast(s);
+      public TreeNode rdeserialize(List<String> l) {
+        // Recursive deserialization.
+        if (l.get(0).equals("null")) {
+          l.remove(0);
+          return null;
         }
-        return deserialize(nodes);
-    }
-
-    private TreeNode deserialize(LinkedList<String> nodes) {
-        if (nodes.isEmpty()) return null;
-        String first = nodes.removeFirst();
-        if (first.equals(NULL)) return null;
-        TreeNode root = new TreeNode(Integer.parseInt(first));
-        root.left = deserialize(nodes);
-        root.right = deserialize(nodes);
+    
+        TreeNode root = new TreeNode(Integer.valueOf(l.get(0)));
+        l.remove(0);
+        root.left = rdeserialize(l);
+        root.right = rdeserialize(l);
         return root;
-    }
+      }
+    
+      // Decodes your encoded data to tree.
+      public TreeNode deserialize(String data) {
+        String[] data_array = data.split(",");
+        List<String> data_list = new LinkedList<String>(Arrays.asList(data_array));
+        return rdeserialize(data_list);
+      }
 }
+
 
 // Your Codec object will be instantiated and called as such:
 // Codec ser = new Codec();
